--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm-run-all",
+  "name": "@cypress/npm-run-all",
   "version": "3.1.0",
   "description": "A CLI tool to run multiple npm-scripts in parallel or sequential.",
   "bin": {
