--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "npm": ">= 2"
   },
   "scripts": {
-    "preversion": "npm run build",
+    "preversion": "npm run build:babel",
     "postversion": "git push && git push --tags",
     "pretest": "node scripts/make-slink.js",
     "clean": "rimraf bin coverage jsdoc lib",
