--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
-    "chalk": "^1.1.3",
+    "ansi-styles": "^3.1.0",
+    "chalk": "^2.0.1",
     "cross-spawn": "^4.0.0",
     "minimatch": "^3.0.2",
     "object-assign": "^4.0.1",
